src/test/ui/error-codes/E0045.rs
extern "Rust" { fn foo(x: u8, ...); }   //~ ERROR E0045

fn main() {
}
